# github_manager_mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  =0.10.0  LICENSE  PROJECT_COMPLETION_SUMMARY.md  README.md  codecov.yml  debug_prd.py  debug_test.py  mcp_capabilities_evaluation_report.md  pyproject.toml  requirements-dev.txt  requirements.txt  task_list.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml
docs/: MCP_TROUBLESHOOTING.md
src/github_project_manager_mcp/: __init__.py  github_client.py  mcp_server_fastmcp.py  server.py
src/github_project_manager_mcp/handlers/: __init__.py  prd_handlers.py  project_handlers.py  project_search_handlers.py  status_column_handlers.py  subtask_handlers.py  task_handlers.py
src/github_project_manager_mcp/models/: __init__.py  prd.py  project.py  status_column.py  subtask.py  task.py
src/github_project_manager_mcp/utils/: __init__.py  auth.py  error_handling.py  logging.py  project_search.py  query_builder.py  relationship_manager.py  validation.py
tasks/: prd-github-project-manager-mcp.md  tasks-missing-capabilities-fixes.md  tasks-prd-github-project-manager-mcp.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_integration_placeholder.py  test_search_functionality_real_api.py
tests/unit/: __init__.py  conftest.py  test_async_initialization_patterns.py  test_auth.py  test_error_handling.py  test_github_client.py  test_mcp_server_fastmcp.py  test_mcp_server_search_initialization.py  test_placeholder.py  test_prd_model.py  test_project_model.py  test_project_search.py  test_project_validation.py  test_query_builder.py  test_server.py  test_subtask_model.py  test_task_model.py  test_validation.py
tests/unit/handlers/: __init__.py  test_prd_complete_graphql_fix.py  test_prd_handlers.py  test_project_handlers.py  test_search_error_handling.py  test_search_functionality_client_initialization.py  test_search_github_client_initialization.py  test_status_column_handlers.py  test_subtask_handlers.py  test_task_handlers.py  test_task_handlers_parameter_processing.py  test_task_handlers_prd_filtering.py  test_task_prd_association_filtering.py
tests/unit/models/: __init__.py
tests/unit/utils/: __init__.py  test_query_builder_task_filtering.py  test_relationship_manager.py
